2010-06-20  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking Macros): lament escape convention.

2010-06-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\macroargctxt): set \catcode`\\=0, as a try
	at supporting \\ \{ \} (but not \,) in macro args.
	Report from Ralf W, Eric B, Patrice D, 	14 Jun 2010 23:48:39.

2010-06-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\setupverbatim): restore wrongly-removed
	\leavevmode, for sake of blank lines in verbatim environments.
	Doc tweaks.

2010-06-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\verbbox): use this for verbatim lines
	instead of \box0, for clarity.
	(\starttabbox): make \verbbox assignment global,
	in case of verbatim lines starting with accents.

2010-06-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\LaTeX): with 10pt running text, use
	plain's \scriptsize (7pt) for the A in LaTeX.

2010-05-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\indexlquoteignore): new macro.
	(\indexnofonts): call it if @set txiindexlquoteignore.
	This is for Free Software, Free Society, 2nd ed.
	Perhaps it should be a general feature,
	or settable on a per-entry basis.

2010-05-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\marksupsetuplqsamp, \marksupsetuprqsamp):
	assign as \markupsetcodequoteleft and ...right, so they respect
	the @txicodequote... settings.
	Request from Mark Polesky, 13 Apr 2010 09:46:23.
	* doc/texinfo.txi (Inserting Quote Characters): document this.

2010-05-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\makedispenvdef): rename from \makedispenv,
	so everything ends with "def".
	(\maketwodispenvdef): rename from \maketwodispenvs.  Change calls.
	(\Esmallquotation): define to be the same as the real \Equotation.

	* doc/texinfo.tex (\entrybreak): new non-command, to allow
	forced line breaks in the toc (or index) separate from the
	maintext.  For Jeanne.

2010-05-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\shortpartentry): make bold, suggestion